# surveillance-platform

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: test.yml
docs/: API_SPEC.md  ARCHITECTURE.md  CODING_STANDARDS.md  DECISIONS.md  GAPS.md  PRD.md  TESTING.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  MapView.tsx  api.ts  index.css
postman/: surveillance-platform.postman_collection.json
services/api/: Dockerfile  pyproject.toml
services/api/api/: deps.py  errors.py  main.py  pagination.py  schemas.py
services/api/api/routers/: cameras.py  events.py  identities.py  map.py  tracks.py
services/api/tests/: conftest.py  test_cameras.py  test_events.py  test_identities.py  test_map.py  test_tracks.py
services/common/: pyproject.toml
services/common/common/: db.py  ids.py  models.py  pagination.py  worker_pool.py
services/common/migrations/: env.py
services/common/migrations/versions/: 0001_initial_schema.py  0002_identities_and_sightings.py
services/common/tests/: test_ids_and_pagination.py  test_worker_pool.py
services/detection/: Dockerfile  pyproject.toml
services/detection/detection/: boxes.py  main.py  storage.py  worker.py
services/detection/tests/: test_boxes.py  test_storage.py  test_worker.py
services/ingestion/: Dockerfile  pyproject.toml
services/ingestion/ingestion/: capture.py  main.py
services/ingestion/tests/: test_capture.py
services/reid/: Dockerfile  pyproject.toml
services/reid/reid/: embedder.py  main.py  matcher.py  worker.py
services/reid/tests/: conftest.py  test_matcher.py  test_worker.py
