[project]
name = "surveillance-api"
version = "0.1.0"
description = "REST API (docs/API_SPEC.md): the only supported way to read/write platform state from outside."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "surveillance-common>=0.1.0",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*"]

[tool.uv.sources]
surveillance-common = { path = "../common", editable = true }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
