[project]
name = "surveillance-reid"
version = "0.1.0"
description = "Matches closed tracks against known identities via appearance embeddings (docs/ARCHITECTURE.md)."
requires-python = ">=3.12"
dependencies = [
    "lap>=0.5.13",
    "onnx>=1.22.0",
    "onnxruntime>=1.23.2",
    "redis>=8.0.1",
    "surveillance-common>=0.1.0",
    "ultralytics>=8.4.101",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["reid*"]

[tool.uv.sources]
surveillance-common = { path = "../common", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
